???? 6.3
    user visible changes:
    * Printing exceptions with traceback and returning proper exit code in case of failure
    * Renamed GET_URL_CLIENT_PATH to DOWNLOAD_TOOL_PATH
    * Removed unecessary indentation in svn output files
    * Fixed get_install_instructions_prefix for Mac - #!/bin/sh returned first

    programmer visible changes:
    * Raising exception if REPRO_TYPE is not defined for sync command
    * Raising exceptions in instl.main (handled and unhandled)
    * DOWNLOAD_TOOL_PATH used as variable in download tools
    * Added return_original_if_not_found to instlInstance.search_paths_helper.find_file_with_search_paths

2013-12-30 6.2  Shai Shasag <shai@waves.com>
    user visible changes:
    * curl DL_INSTRUCTIONS_TYPE: either config_file or one_by_one
    * new instl commands:
        ** create_readlinks, creates .readlink files instead of symlink
        ** resolve_readlinks creates symlinks instead of .readlinks file - currentlu used in copy on Mac OS
    * trans command now reads BASE_REV from config file, has new option --config
    * up2s3 command implemented using aws and writes a batch file like all other commands
    * up2s3 command can be used on a range of versions

    programmer visible changes:
    * new function SVNItem.walk_items_depth_first, and tests for this function
    * platformSpecificHelper_XXX new functions: rmfile, rmdir, not implemented for windows yet
    * variable BASE_REPO_REV default set to 1 for all commands
    * CONFIG_FILE variable instead to S3_CONFIG_FILE and used by all instlAdmin commands

2013-12-29  6.1  Shai Shasag <shai@waves.com>
  * fixed wrong depends calculation.
  * special characters in urls given to curl are now escaped using the %xx convention